Fix T59519: Grease Pencil stroke with noise modifier crashes blender

The first point index was wrong calculated.